--- a/home.html
+++ b/home.html
@@ -18,7 +18,7 @@
 	href=apple-touch-icon-precomposed.png>
 <link rel=stylesheet
 	href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400italic,700,700italic">
-<link rel=stylesheet href=main.css>
+<link rel=stylesheet href=styles/main.css>
 </head>
 <body>
 	<div class=top></div>
