--- a/home.html
+++ b/home.html
@@ -27,7 +27,7 @@
 			<div class=avatar></div>
 			<p>Hi, Welcome to FrameByFrame</p>
 			<p>
-				This is an attempt at using the Web Animation API for good.	
+				This is an attempt at using the Web Animation API for the purposes of doing good.	
 			</p>
 			</p>
 			<div class=icons>
